# stixels

./: CMakeLists.txt  README.md  RoadEstimation.cu  RoadEstimation.h  RoadEstimationKernels.cu  RoadEstimationKernels.h  Stixels.cu  Stixels.hpp  StixelsKernels.cu  StixelsKernels.h  configuration.h  main.cu  util.h
example/stixels/: ap_000_29-02-2016_09-00-09_000002.png.stixels
